# LinuxSoftPWM

./: CMakeLists.txt  README.md  linuxsoftpwmConfig.cmake.in
examples/: README.md  read_pwm_1_259.cpp  write_pwm_1_259_100hz_50percent.cpp
src/: linuxsoftpwm.cpp  linuxsoftpwm.h
